--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -12,19 +12,15 @@ env:
   BUILD_TYPE: Release
 
 jobs:
-  build:
+  build-ubuntu20:
     # The CMake configure and build commands are platform agnostic and should work equally
     # well on Windows or Mac.  You can convert this to a matrix build if you need
     # cross-platform coverage.
     # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
 
     steps:
     - uses: actions/checkout@v2
-
-    - name: Install Dependencies
-      # Install dependencies with shell script
-      run: sh example/tool/install_dependencies.sh
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
@@ -35,7 +31,27 @@ jobs:
         mkdir -p build && cd build
         cmake .. -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
 
-        cd ${{github.workspace}}/example/tool
+    - name: Build
+      # Build examples and tests
+      run: | 
+        cd ${{github.workspace}}/build
+        make -j4
+      
+  build-ubuntu18:
+    # The CMake configure and build commands are platform agnostic and should work equally
+    # well on Windows or Mac.  You can convert this to a matrix build if you need
+    # cross-platform coverage.
+    # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
+    runs-on: ubuntu-18.04
+
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: Configure CMake
+      # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
+      # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
+      run: | 
+        cd ${{github.workspace}}
         rm -rf build
         mkdir -p build && cd build
         cmake .. -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
@@ -46,6 +62,4 @@ jobs:
         cd ${{github.workspace}}/build
         make -j4
 
-        cd ${{github.workspace}}/example/tool/build
-        make -j4
-      
+  
