--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -3,7 +3,9 @@ cmake_minimum_required(VERSION 3.4)
 project(flexiv_rdk-examples)
 
 set(CMAKE_CXX_STANDARD 14)
-message("Building for system: ${CMAKE_SYSTEM_NAME}")
+
+message("OS: ${CMAKE_SYSTEM_NAME}")
+message("Processor: ${CMAKE_SYSTEM_PROCESSOR}")
 
 # Configure build type
 if(NOT CMAKE_BUILD_TYPE)
@@ -22,16 +24,10 @@ set(EXAMPLE_LIST
   teach_by_demonstration
 )
 
-# Additional examples for Mac
-if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
-  set(EXAMPLE_LIST ${EXAMPLE_LIST}
-    robot_dynamics
-  )
-endif()
 
-# Additional examples for Linux
-if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
-  set(EXAMPLE_LIST ${EXAMPLE_LIST}
+# Additional examples for Linux and Mac
+if(CMAKE_HOST_UNIX)
+  list(APPEND EXAMPLE_LIST
     RT_cartesian_impedance_control
     RT_joint_floating
     RT_joint_impedance_control
