--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,29 +14,28 @@ if(NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE Release CACHE STRING "CMake build type" FORCE)
 endif()
 
-# Configure processor platform
-set(BUILD_PLATFORM "x86_64" CACHE STRING "Processor platform")
-set_property(CACHE BUILD_PLATFORM PROPERTY STRINGS "x86_64" "arm64")
-
 # Set static library
-message("Building for system: ${CMAKE_SYSTEM_NAME}")
+message("OS: ${CMAKE_SYSTEM_NAME}")
+message("Processor: ${CMAKE_SYSTEM_PROCESSOR}")
 if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
-  if(${BUILD_PLATFORM} STREQUAL "x86_64")
+  if(${CMAKE_SYSTEM_PROCESSOR} MATCHES "x86_64")
     set(RDK_STATIC_LIBRARY "${CMAKE_CURRENT_SOURCE_DIR}/lib/libFlexivRdk.x86_64-linux-gnu.a")
-  elseif(${BUILD_PLATFORM} STREQUAL "arm64")
+  elseif(${CMAKE_SYSTEM_PROCESSOR} MATCHES "arm64")
     set(RDK_STATIC_LIBRARY "${CMAKE_CURRENT_SOURCE_DIR}/lib/libFlexivRdk.aarch64-linux-gnu.a")
+  else()
+    message(FATAL_ERROR "Linux with ${CMAKE_SYSTEM_PROCESSOR} processor is currently not supported.")
   endif()
 elseif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
-  if(${BUILD_PLATFORM} STREQUAL "x86_64")
-    message(FATAL_ERROR "Mac with x86_64 processor is currently not supported.")
-  elseif(${BUILD_PLATFORM} STREQUAL "arm64")
+  if(${CMAKE_SYSTEM_PROCESSOR} MATCHES "arm64")
     set(RDK_STATIC_LIBRARY "${CMAKE_CURRENT_SOURCE_DIR}/lib/libFlexivRdk.arm64-darwin.a")
+  else()
+    message(FATAL_ERROR "Mac with ${CMAKE_SYSTEM_PROCESSOR} processor is currently not supported.")
   endif()
 elseif(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
-  if(${BUILD_PLATFORM} STREQUAL "x86_64")
+  if(${CMAKE_SYSTEM_PROCESSOR} MATCHES "AMD64")
     set(RDK_STATIC_LIBRARY "${CMAKE_CURRENT_SOURCE_DIR}/lib/FlexivRdk.x86_64-windows.lib")
-  elseif(${BUILD_PLATFORM} STREQUAL "arm64")
-    message(FATAL_ERROR "Windows with arm64 processor is currently not supported.")
+  else()
+    message(FATAL_ERROR "Windows with ${CMAKE_SYSTEM_PROCESSOR} processor is currently not supported.")
   endif()
 endif()
 
