--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 3.18.6)
 
 # ===================================================================
-#      PROJECT CONFIG
+#      PROJECT SETUP
 # ===================================================================
-project(flexiv_rdk VERSION 1.0.0)
+project(flexiv_rdk VERSION 1.1.0)
 
 # C++14 required
 set(CMAKE_CXX_STANDARD 14)
