--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -32,12 +32,12 @@ endif()
 # Find flexiv_rdk INTERFACE library
 find_package(flexiv_rdk REQUIRED)
 
-# Build all selected examples
+# Build all selected tests
 foreach(test ${TEST_LIST})
   add_executable(${test} ${test}.cpp)
   target_link_libraries(${test} flexiv::flexiv_rdk)
   # C++14 required
-  set_target_properties(${example} PROPERTIES 
+  set_target_properties(${test} PROPERTIES 
     CXX_STANDARD 14
     CXX_STANDARD_REQUIRED ON)
 endforeach()
