Add new example to change logging behavior of RDK client

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -22,6 +22,7 @@ set(EXAMPLE_LIST
   basics6_gripper_control
   basics7_auto_recovery
   basics8_update_robot_tool
+  basics9_logging_behavior
   intermediate6_robot_dynamics
 )
 
